--- a/Steganografia - testy narzędzi/sprawozdanie.ipynb
+++ b/Steganografia - testy narzędzi/sprawozdanie.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Sprawozdanie zostało napisane w notatniku Jupyter z użyciem jądra Deno, które pozwala na wykonywanie kodu w języku TypeScript zamiast w Pythonie.\n",
     "\n",
-    "Najpierw neleży zainstalować Deno. Należy uruchomić poniższą komendę w powershell.\n",
+    "Najpierw należy zainstalować Deno. Należy uruchomić poniższą komendę w powershell.\n",
     "\n",
     "```powershell\n",
     "irm https://deno.land/install.ps1 | iex\n",
@@ -57,9 +57,9 @@
     "\n",
     "- Aby łatwiej dostrzec różnicę wydajności między programami wybrano duży plik wejściowy - obraz bmp o rozmiarze 35,8MB.\n",
     "\n",
-    "- Do osadzania wybrano archiwum zip o rozmiarze 3,32MB zawierające 3 zdjęcia w formacie JPG. Dzięki temu uyskano pewność, że dane binarne do osadzenia są wysokiej entropii. Początkowo zakładano użycie większego pliku, jednak program S-Tools obłsuguje mniejsze rozmiary plików niż pozostałe aplikacje. Prawdopodobnie używa tylko 1 bitu do osadzania danych i nie pozwala zmienić tego ustawienia.\n",
+    "- Do osadzania wybrano archiwum zip o rozmiarze 3,32MB zawierające 3 zdjęcia w formacie JPG. Dzięki temu uzyskano pewność, że dane binarne do osadzenia są wysokiej entropii. Początkowo zakładano użycie większego pliku, jednak program S-Tools obsługuje mniejsze rozmiary plików niż pozostałe aplikacje. Prawdopodobnie używa tylko 1 bitu do osadzania danych i nie pozwala zmienić tego ustawienia.\n",
     "\n",
-    "- Badane programy miały zazywczaj domyślnie włączoną funkcję kompresji. Nie jest to przedmiotem badań, dlatego została wyłączona.\n",
+    "- Badane programy miały zazwyczaj domyślnie włączoną funkcję kompresji. Nie jest to przedmiotem badań, dlatego została wyłączona.\n",
     "\n",
     "- Wszystkie wybrane programy opierają się na interfejsie graficznym oraz nie wszystkie mierzą czasy wykonywania operacji. Tam, gdzie nie było innej możliwości, czasy osadzania i wyodrębniania danych zostały zmierzone stoperem.\n",
     "\n",
@@ -77,7 +77,7 @@
     "| StegaMail | Nie | 3s | 7s |\n",
     "| VSL | Nie | 5s | 3s |\n",
     "\n",
-    "Najszybszy okazał się program Steg, jednak wydajność programów StegaMail i VSL była podobna. Od wyników znacznie odbiegał ImageSpyer. Prawdopodobnie użyte szyfrowanie zwiększa objętość danych do osadzenia. Przy wyodrębnianu ImageSpyer prawdopodobnie musi odczytać cały plik, nawet jeśli dane były mniejsze."
+    "Najszybszy okazał się program Steg, jednak wydajność programów StegaMail i VSL była podobna. Od wyników znacznie odbiegał ImageSpyer. Prawdopodobnie użyte szyfrowanie zwiększa objętość danych do osadzenia. Przy wyodrębnianiu ImageSpyer prawdopodobnie musi odczytać cały plik, nawet jeśli dane były mniejsze."
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Najpierw została zadeklarowana funkcja pomocnicza `getBitsIterator` zwracająca iterator, który ułatwia przeglądanie tablicy bajtów po wybranej ilości bitów (1-4). Funkcjonalność ta ułatwi podizelenie danych na małe fragmenty, które zostaną osadzone w najmniej znaczących częściach bajtów."
+    "Najpierw została zadeklarowana funkcja pomocnicza `getBitsIterator` zwracająca iterator, który ułatwia przeglądanie tablicy bajtów po wybranej ilości bitów (1-4). Funkcjonalność ta ułatwi podzielenie danych na małe fragmenty, które zostaną osadzone w najmniej znaczących częściach bajtów."
    ]
   },
   {
@@ -416,7 +416,7 @@
    "metadata": {},
    "source": [
     "Ocena wizualna:\n",
-    "- Dla 1 bitu różnica jest niedostrzealna gołym okiem. Różnica między kolorem oryginalnym to zaledwie 0.4% (dla każdego kanału).\n",
+    "- Dla 1 bitu różnica jest niedostrzegalna gołym okiem. Różnica między kolorem oryginalnym to zaledwie 0.4% (dla każdego kanału).\n",
     "- Dla 2 bitów wprawne oko po przybliżeniu może dostrzec, że pojawił się charakterystyczny szum.\n",
     "- Dla 3 bitów szum ten jest już dobrze widoczny, zwłaszcza na fragmentach obrazu o jednolitym kolorze. W tym przypadku na niebie i powierzchni po prawej stronie obrazu.\n",
     "- Dla 4 bitów szum jest jeszcze bardziej widoczny. Widać teraz także wyraźnie granicę, gdzie zakodowane dane się skończyły. W celu zmniejszenia podejrzeń o istnieniu osadzonych danych, warto byłoby zakodować tekst na całej powierzchni obrazu."
