--- a/Szyfrowanie + kompresja/sprawozdanie.ipynb
+++ b/Szyfrowanie + kompresja/sprawozdanie.ipynb
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "W kryptoanalizie przydatna będzie funkcja zlicząjąca częstość występowania liter w podanym tekście."
+    "W kryptoanalizie przydatna będzie funkcja zliczająca częstość występowania liter w podanym tekście."
    ]
   },
   {
@@ -532,7 +532,8 @@
    "source": [
     "Od długości 50 znaków czas łamania rośnie liniowo, choć są to wciąż bardzo małe wartości. W praktyce nie warto analizować tak długich wiadomości w całości. W analizowanych przypadkach system osiągnął stuprocentową skuteczność już przy 100 znakach. Dla pewności możemy analizować np. 200 pierwszych znaków szyfrogramu.\n",
     "\n",
-    "## Zabezpieczanie danych z wykorzytaniem ZIP\n",
+    "## Zadanie 1 - zabezpieczanie danych z wykorzystaniem ZIP\n",
+    "\n",
     "### Zapoznaj się z narzędziem John the Ripper\n",
     "\n",
     "Instalacja John the Ripper\n",
@@ -540,11 +541,12 @@
     "Windows - https://www.openwall.com/john/ -> Download 1.9.0-jumbo-1 64-bit Windows 7z lub zip -> Wypakować\n",
     "\n",
     "Linux - sudo apt install john\n",
+    "\n",
     "### Zbadaj możliwości odzyskiwania hasła z szyfrowanego archiwum za pomocą podanego narzędzia\n",
     "\n",
-    "* Stworzenie Pliku txt\n",
-    "* Archivizacja pliku z hasłem \"a$9\" \n",
-    "* Stworzenie hash komendą - zip2john file.zip > hash\n",
+    "* Stworzenie pliku txt\n",
+    "* Archiwizacja pliku z hasłem \"a$9\" \n",
+    "* Obliczenie hash komendą - zip2john file.zip > hash\n",
     "* Próba odzyskania hasła komendą - john hash\n",
     "\n",
     "![img](johntest.png)\n",
@@ -552,32 +554,33 @@
     "\n",
     "### Oceń czas w zależności od mocy i długości hasła oraz od typu i ilości danych\n",
     "\n",
-    "Przygotowanie danych\n",
+    "#### Przygotowanie danych\n",
     "\n",
-    "Plik textowy zawierający jeden paragraf lorem lipsum\n",
+    "Do badań przygotowano następujące dane testowe:\n",
+    "* Plik tekstowy zawierający jeden paragraf *lorem lipsum*\n",
     "\n",
-    "Folder zawierający pliki textowe o łącznym rozmiarze 80MB\n",
-    "Folder zawierający pliki jpg o łącznym rozmiarze 80MB\n",
-    "Folder zawierający pliki mp4 Lorem Lipsum o łącznym rozmiarze 80MB\n",
+    "* Folder zawierający pliki tekstowe o łącznym rozmiarze 80MB\n",
+    "* Folder zawierający pliki jpg o łącznym rozmiarze 80MB\n",
+    "* Folder zawierający pliki mp4 *Lorem Lipsum* o łącznym rozmiarze 80MB\n",
     "\n",
-    "Folder zawierający pliki textowe o łącznym rozmiarze 470MB\n",
-    "Folder zawierający pliki jpg o łącznym rozmiarze 470MB\n",
-    "Folder zawierający pliki mp4 o łącznym rozmiarze 470MB\n",
+    "* Folder zawierający pliki tekstowe o łącznym rozmiarze 470MB\n",
+    "* Folder zawierający pliki jpg o łącznym rozmiarze 470MB\n",
+    "* Folder zawierający pliki mp4 o łącznym rozmiarze 470MB\n",
     "\n",
-    "Próba odzyskania hasła\n",
+    "#### Próba odzyskania hasła\n",
     "\n",
-    "Jeden paragraf lore lipsum zaszyfrowany w trzy inne archiwa z zasłami\n",
+    "Jeden paragraf *lore lipsum* zaszyfrowany w trzy inne archiwa z hasłami\n",
     "* bTa - > 1s\n",
     "* o9A - > 1s\n",
-    "* (b2 - > 2m 17m (z ograniczeniem długości hasłą od 3 znakó do 4 znaków)\n",
-    "* 9$B - > 10m 17s (z ograniczeniem długości hasłą od 3 znakó do 5 znaków)\n",
+    "* (b2 - > 2m 17m (z ograniczeniem długości hasła od 3 do 4 znaków)\n",
+    "* 9$B - > 10m 17s (z ograniczeniem długości hasła od 3 do 5 znaków)\n",
     "\n",
-    "80MB danych z chasłem (password) (z ograniczeniem długości hasłą od 3 znakó do 4 znaków)\n",
+    "80MB danych z hasłem (password) (z ograniczeniem długości hasła od 3 do 4 znaków)\n",
     "* Lore lipsum (b1A5) - 6s \n",
     "* Pictures (74Pa) - 24s \n",
     "* Video (94Ar) - 18s\n",
     "\n",
-    "490MB danych z chasłem (password) (z ograniczeniem długości hasłą od 3 znakó do 4 znaków)\n",
+    "490MB danych z hasłem (password) (z ograniczeniem długości hasła od 3 do 4 znaków)\n",
     "* Lore lipsum (6o8A) - 6s \n",
     "* Pictures (Ka91) - 8s\n",
     "* Video (09zt)- 8s \n",
@@ -585,16 +588,11 @@
     "### Wnioski\n",
     "\n",
     "#### Wpływ długości i złożoności hasła\n",
-    "Są to główne czynniki wpływające na czas odzyskania hasła dodanie nawet jednego dodatkowego zanku może znacząco wydłużyć czas trwania programu. To samo tyczy się używanie znaków specialnych w haśle.\n",
+    "Są to główne czynniki wpływające na czas odzyskania hasła. Dodanie nawet jednego dodatkowego znaku może znacząco wydłużyć czas trwania programu. To samo tyczy się używania znaków specjalnych w haśle.\n",
     "\n",
     "#### Wpływ rozmiaru i typu plików na czas odzyskiwania\n",
-    "Różnice zaobswowane przy innych typach plików lub rozmiaró plików można przypisać na złośoność hasła/sposób w jaki algorytm sprawdza kolejne hasła. Wówczas nie było by znaczącej różnicy w typach pików i rozmiarze danych. Na podstawie tak małego zbioru danych wraz z nie jednoznacznymi wynikami nie jesteśmy stwiedzić czy rozmiaru i typu danych wpływa na czas odzyskiwania danych "
+    "Różnice zaobserwowane przy innych typach lub rozmiarach plików można przypisać złożoności hasła oraz sposobowi, w jaki algorytm sprawdza kolejne możliwości. W takim przypadku nie byłoby znaczącej różnicy między typami plików a rozmiarem danych. Na podstawie tak małego zbioru danych oraz niejednoznacznych wyników nie jesteśmy w stanie stwierdzić, czy rozmiar i typ danych wpływają na czas odzyskiwania danych."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
