Format for consistency

--- a/Szyfrowanie + kompresja/sprawozdanie.ipynb
+++ b/Szyfrowanie + kompresja/sprawozdanie.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Od teraz podczas edycji notatnika Jupyter w Visual Studio Code można wybrać jądro Deno.\n",
     "\n",
-    "## Zadanie 1 - własny algrytm szyfrowania/deszyfrowania\n",
+    "## Zadanie 1 - własny algorytm szyfrowania/deszyfrowania\n",
     "\n",
     "Wybrany algorytm to szyfr Cezara.\n",
     "\n",
@@ -533,7 +533,7 @@
    "source": [
     "Od długości 50 znaków czas łamania rośnie liniowo, choć są to wciąż bardzo małe wartości. W praktyce nie warto analizować tak długich wiadomości w całości. W analizowanych przypadkach system osiągnął stuprocentową skuteczność już przy 100 znakach. Dla pewności możemy analizować np. 200 pierwszych znaków szyfrogramu.\n",
     "\n",
-    "## Zadanie 1 - zabezpieczanie danych z wykorzystaniem ZIP\n",
+    "## Zadanie 2 - zabezpieczanie danych z wykorzystaniem ZIP\n",
     "\n",
     "### Zapoznaj się z narzędziem John the Ripper\n",
     "\n",
