--- a/Szyfrowanie + kompresja/sprawozdanie.ipynb
+++ b/Szyfrowanie + kompresja/sprawozdanie.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Sprawozdanie zostało napisane w notatniku Jupyter z użyciem jądra Deno, które pozwala na wykonywanie kodu w języku TypeScript zamiast w Pythonie.\n",
     "\n",
-    "Najpierw neleży zainstalować Deno. Należy uruchomić poniższą komendę w powershell.\n",
+    "Najpierw należy zainstalować Deno. Należy uruchomić poniższą komendę w powershell.\n",
     "\n",
     "```powershell\n",
     "irm https://deno.land/install.ps1 | iex\n",
@@ -159,7 +159,7 @@
     "\n",
     "Przypuśćmy, że atakujący zna alfabet, w którym została napisana wiadomość. Może go uzyskać poprzez przechwycenie kilku zaszyfrowanych wiadomości. Atakujący może z łatwością znaleźć wszystkie możliwe odszyfrowane wiadomości, jednak problemem może być rozpoznanie prawidłowej wiadomości. Jednym ze sposobów jest sprawdzenie stopnia dopasowania częstości liter do języka, w którym została napisana wiadomość.\n",
     "\n",
-    "Częstości liter w tekście napisanym języku polskim jest nastepująca (źródło: [https://commons.wikimedia.org/wiki/File:Polish_letters_frequencies.svg](https://commons.wikimedia.org/wiki/File:Polish_letters_frequencies.svg)):"
+    "Częstości liter w tekście napisanym języku polskim jest nastepujaca (źródło: [https://commons.wikimedia.org/wiki/File:Polish_letters_frequencies.svg](https://commons.wikimedia.org/wiki/File:Polish_letters_frequencies.svg)):"
    ]
   },
   {
@@ -381,11 +381,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Badanie zależności czasu łamania od parametrów szyratora\n",
+    "### Badanie zależności czasu łamania od parametrów szyfratora\n",
     "\n",
     "Napisany system łamania klucza sprawdza wszystkie możliwe klucze i wybiera najbardziej prawdopodobną odpowiedź. Dlatego niezależnie od klucza, czas łamania będzie taki sam. W zamian zostanie zbadany czas i trafność wyników w zależności od długości wiadomości.\n",
     "\n",
-    "Zdefniujmy 5 dłuższych tekstów i sprawdźmy rezultaty dla różnych długości wiadomości."
+    "Zdefiniujmy 5 dłuższych tekstów i sprawdźmy rezultaty dla różnych długości wiadomości."
    ]
   },
   {
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Poniżej zotanie narysowany wykres ze wskaźnikiem skuteczności w zależności od długości wiadomości."
+    "Poniżej zostanie narysowany wykres ze wskaźnikiem skuteczności w zależności od długości wiadomości."
    ]
   },
   {
@@ -471,9 +471,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Już przy 100 znakach wszyzstkie wiadomości zostały poprawnie odszyfrowane. Dla krótszych wiadomości można posortować rezultaty od najbardziej prawdopodobnych wiadomości i dokonać wyboru ręcznie lub użyć modelu językowego.\n",
+    "Już przy 100 znakach wszystkie wiadomości zostały poprawnie odszyfrowane. Dla krótszych wiadomości można posortować rezultaty od najbardziej prawdopodobnych wiadomości i dokonać wyboru ręcznie lub użyć modelu językowego.\n",
     "\n",
-    "Poniżej zotanie narysowany średni czas łamania klucza w zależności od długości wiadomości."
+    "Poniżej zostanie narysowany średni czas łamania klucza w zależności od długości wiadomości."
    ]
   },
   {
