Update link and export settings

--- a/Szyfrowanie + kompresja/sprawozdanie.ipynb
+++ b/Szyfrowanie + kompresja/sprawozdanie.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Szyfrowanie + kompresja\n",
-    "Najnowsza wersja sprawozdania jest dostępna pod adresem: [https://github.com/Gombek7/techniki-poufnosci/blob/main/Konfiguracja tunelu VPN/sprawozdanie.md](https://github.com/Gombek7/techniki-poufnosci/blob/main/Konfiguracja%20tunelu%20VPN/sprawozdanie.md)\n",
+    "Najnowsza wersja sprawozdania jest dostępna pod adresem: [https://github.com/Gombek7/techniki-poufnosci/blob/main/Szyfrowanie%20%2B%20kompresja/sprawozdanie.ipynb](https://github.com/Gombek7/techniki-poufnosci/blob/main/Szyfrowanie%20%2B%20kompresja/sprawozdanie.ipynb)\n",
     "\n",
     "Członkowie zespołu:\n",
     "- Jarosław Dakowicz\n",
